syntax = "proto3";

package user;

service UserService {
  rpc Signup (signupRequest) returns (signupResponse) {}
}


message signupRequest {
  string name = 1;
  string email =2;
  string password = 3;
}

message  signupResponse {
  string userUuid = 1;
  string name = 2;
  string email = 3;
  string password =4;
  string createdAt = 5;
  string updatedAt =6;
}